<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <TextView
        android:id="@+id/tw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/menu_lists"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/menu_title"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="556dp"
        android:text="@string/menu_manufacturers"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="556dp"
        android:text="@string/menu_exit"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/ttl_settings"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:text="@string/menu_bcd"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/menu_products"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/menu_stores"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:text="@string/menu_map"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibLists"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="130dp"
        android:scaleType="fitCenter"
        android:src="@drawable/lists512"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibProducts"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="226dp"
        android:layout_marginTop="130dp"
        android:scaleType="fitXY"
        android:src="@drawable/product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibSettings"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="280dp"
        android:scaleType="fitCenter"
        android:src="@drawable/settings"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibProducers"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="584dp"
        android:scaleType="fitXY"
        android:src="@drawable/factory"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibQuit"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="584dp"
        android:scaleType="center"
        android:src="@drawable/exit"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibScanner"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="436dp"
        android:scaleType="fitXY"
        android:src="@drawable/barcode"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibMap"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="436dp"
        android:scaleType="fitXY"
        android:src="@drawable/map"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibStores"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="280dp"
        android:scaleType="fitXY"
        android:src="@drawable/store"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>