<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cvtbRePass"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="292dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundMode="none"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtRePass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:textColor="@color/sys_text"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvwPassword2"
        android:layout_width="88dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="244dp"
        android:text="@string/lbl_password"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twUsername"
        android:layout_width="88dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="176dp"
        android:text="@string/lbl_username"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="57dp"
        android:src="@drawable/logo512_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvtbUsername"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="160dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundMode="none"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:textColor="@color/sys_text"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvtbPassword"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="228dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundMode="none"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:textColor="@color/sys_text"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvwRePass"
        android:layout_width="106dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="292dp"
        android:text="@string/lbl_repass"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ttl_newuser_message"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/Theme.ShoppingAssistant.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:text="@string/lnk_signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>