<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout13"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProducerFragment" >

    <TextView
        android:id="@+id/twlblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/lbl_address"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="104dp"
        android:text="@string/lbl_manufacturer"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/twlblAddress"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="MANUFACTURER NAME"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twTitlePrices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:text="@string/ttl_products"
        android:textAppearance="@style/Theme.ShoppingAssistant.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibSearch"
        android:layout_width="62dp"
        android:layout_height="56dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="296dp"
        android:scaleType="fitXY"
        android:src="@drawable/magnifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="290dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwProducts"
        android:layout_width="408dp"
        android:layout_height="381dp"
        android:layout_marginTop="348dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/card_view_design" />

    <ImageButton
        android:id="@+id/ibMap"
        android:layout_width="112dp"
        android:layout_height="109dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="172dp"
        android:scaleType="fitCenter"
        android:src="@drawable/map"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>